Update Team Members “06-14-35-”

--- a/v1/content/team-members/06-14-35-.md
+++ b/v1/content/team-members/06-14-35-.md
@@ -25,6 +25,10 @@ members:
     image: /img/whatsapp-image-2023-11-28-at-5.10.36-pm-meriam-hanna.jpeg
     email: meriam.hannaa@gmail.com
     linkedin: https://www.linkedin.com/in/meriam-hanna-0341a9209/
+  - name: Tarek Hany Ali Ahmed
+    image: /img/img_3178-tarek-hany.jpeg
+    role: Member
+    email: Tarekhany76@gmail.com
 ---
 **Cairo University Eco Racing Team - Engine Sub Team**
 
