Update Team Members “06-14-21-”

--- a/v1/content/team-members/06-14-21-.md
+++ b/v1/content/team-members/06-14-21-.md
@@ -19,6 +19,10 @@ members:
     email: "Osamaashraf1970@gmail.com "
     linkedin: https://www.linkedin.com/in/osama-ashraf-a06770247?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
     facebook: https://www.facebook.com/osama.ashraf.56884?mibextid=ZbWKwL
+  - name: Ahmed wael
+    role: Member
+    email: ahmed.wael7575@gmail.com
+    image: /img/9fa8d067-72af-4a84-a267-f5c8ab39a1b6-ahmed-wael.jpg
 ---
 **Cairo University Eco Racing Team - Vehicle Dynamics Sub Team**
 
