Update Team Members “06-14-21-”

--- a/v1/content/team-members/06-14-21-.md
+++ b/v1/content/team-members/06-14-21-.md
@@ -23,6 +23,11 @@ members:
     role: Member
     email: ahmed.wael7575@gmail.com
     image: /img/9fa8d067-72af-4a84-a267-f5c8ab39a1b6-ahmed-wael.jpg
+  - name: Salma tarek omera
+    image: /img/screenshot_20231130-132217_gallery-salma-omera.jpg
+    role: Member
+    email: Salmaomera158@gmail.com
+    linkedin: https://www.linkedin.com/in/salma-omera-67665014a/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
 ---
 **Cairo University Eco Racing Team - Vehicle Dynamics Sub Team**
 
