Update Team Members “06-14-55-”

--- a/v1/content/team-members/06-14-55-.md
+++ b/v1/content/team-members/06-14-55-.md
@@ -29,6 +29,12 @@ members:
     email: Menan.ahmed98@eng-st.cu.edu.eg
     role: Member
     image: /img/img_2446-menan-ahmed.jpg
+  - name: "Abdalla Abdelnaser Riad "
+    image: /img/save_٢٠٢٣١٢٠١_١٥٣٧٥٨-عبدالله-عبدالناصر-رياض-حسانين.jpg
+    role: Member
+    email: abdelnaserabdullah54@gmail.com
+    linkedin: https://www.linkedin.com/in/abdullah-abdelnaser-761501233/
+    facebook: https://www.facebook.com/profile.php?id=100004812730603&mibextid=ZbWKwL
 ---
 **Cairo University Eco Racing Team - Operations & Manufacturing Sub Team**
 
