Update Team Members “06-14-37-”

--- a/v1/content/team-members/06-14-37-.md
+++ b/v1/content/team-members/06-14-37-.md
@@ -28,6 +28,13 @@ members:
     email: basant.yasserbyb@gmail.com
     linkedin: https://www.linkedin.com/in/basant-yasser-5a06931ba
     image: /img/img-20230518-wa0034-basant-mohammed.jpg
+  - name: Alaa Hussein Ali Sallam
+    image: /img/alaa-hussien.jpg
+    role: Member
+    email: alaahusseinali93@gmail.com‏
+    linkedin: https://www.linkedin.com/in/alaa-hussein-8abb91265
+    github: ""
+    facebook: https://www.facebook.com/alaa.hussein.3766?mibextid=ZbWKwL
 ---
 **Cairo University Eco Racing Team - Power Electronics Sub Team**
 
