Update Team Members “06-14-37-”

--- a/v1/content/team-members/06-14-37-.md
+++ b/v1/content/team-members/06-14-37-.md
@@ -35,6 +35,16 @@ members:
     linkedin: https://www.linkedin.com/in/alaa-hussein-8abb91265
     github: ""
     facebook: https://www.facebook.com/alaa.hussein.3766?mibextid=ZbWKwL
+  - name: Omar Hussein
+    image: /img/omar-hussein2.jpeg
+    role: Member
+    email: omar.hussein01@eng-st.cu.edu.eg
+    linkedin: https://www.linkedin.com/in/omar-hussein-433b81243?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
+  - name: Yasmine ahmed mohamed abu-ali
+    image: /img/yasmin-aboali.jpeg
+    role: Member
+    email: yassmineah711@gmail.com
+    linkedin: https://www.linkedin.com/in/yasmine-ahmed-875108226?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
 ---
 **Cairo University Eco Racing Team - Power Electronics Sub Team**
 
