Update Team Members “06-14-42-”

--- a/v1/content/team-members/06-14-42-.md
+++ b/v1/content/team-members/06-14-42-.md
@@ -52,6 +52,17 @@ members:
     email: farida.moukhtar03@eng-st.cu.edu.eg
     linkedin: https://www.linkedin.com/in/farida-moukhtar/
     facebook: https://web.facebook.com/profile.php?id=100009732034254
+  - name: Abdelrahman Noaman Loqman
+    image: /img/abdelrahman-noaman-loqman.jpeg
+    role: Member
+    email: abdelrahmannoaman1@gmail.com
+    linkedin: https://www.linkedin.com/in/abdulrahman-noaman-78b362205
+    facebook: https://www.facebook.com/3abdelrahman.no3man
+  - name: Abdal-hameed Emad
+    image: /img/img_8545-abdal-hameed-emad.jpg
+    role: Member
+    email: medo.emadd23@gmail.com
+    linkedin: https://www.linkedin.com/in/abdal-hameed-emad-740097227
 ---
 **Cairo University Eco Racing Team - Autonomous Development Sub Team**
 
