Update Team Members “06-14-46-”

--- a/v1/content/team-members/06-14-46-.md
+++ b/v1/content/team-members/06-14-46-.md
@@ -48,6 +48,21 @@ members:
     email: omarsaadelgharbawy@gmail.com
     linkedin: https://www.linkedin.com/in/omar-saad-75521119a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
     facebook: https://www.facebook.com/omar.saad.50?mibextid=LQQJ4d
+  - name: Omar Saad Elgharbawy
+    image: /img/omar-saad.jpeg
+    role: Member
+    email: omarsaadelgharabwy@gmail.com
+    linkedin: https://www.linkedin.com/in/omar-saad-75521119a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
+    facebook: https://www.facebook.com/omar.saad.50?mibextid=LQQJ4d
+  - name: "Bassant Ahmed Elbakry "
+    image: /img/bassant-ahmed-elbakry.jpg
+    role: Member
+    email: bassantelbakry0@gmail.com
+    linkedin: https://www.linkedin.com/in/bassant-ahmed-elbakry-57662921b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
+    facebook: https://www.facebook.com/bosy.bosy.3591?mibextid=9R9pXO
+  - name: Ahmed Alaaeldin Ibrahim
+    image: /img/ahmed-alaa.jpg
+    role: Member
 ---
 **Cairo University Eco Racing Team - Autonomous Embedded Systems Sub Team**
 
