Update Team Members “06-14-55-”

--- a/v1/content/team-members/06-14-55-.md
+++ b/v1/content/team-members/06-14-55-.md
@@ -35,6 +35,10 @@ members:
     email: abdelnaserabdullah54@gmail.com
     linkedin: https://www.linkedin.com/in/abdullah-abdelnaser-761501233/
     facebook: https://www.facebook.com/profile.php?id=100004812730603&mibextid=ZbWKwL
+  - name: Veronia Ehab Shafiq Riad
+    image: /img/342218445_1354571935088539_6302549794339725346_n-veronia-riad.jpg
+    role: Member
+    linkedin: https://www.linkedin.com/in/veronia-ehab-281a8221b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
 ---
 **Cairo University Eco Racing Team - Operations & Manufacturing Sub Team**
 
