Update Team Members “06-14-46-”

--- a/v1/content/team-members/06-14-46-.md
+++ b/v1/content/team-members/06-14-46-.md
@@ -63,6 +63,9 @@ members:
   - name: Ahmed Alaaeldin Ibrahim
     image: /img/ahmed-alaa.jpg
     role: Member
+  - name: Omar Said
+    image: /img/picsart_12-25-09.51.45-omar-aziz.jpg
+    role: Member
 ---
 **Cairo University Eco Racing Team - Autonomous Embedded Systems Sub Team**
 
