--- a/v1/content/team-members/06-14-42-.md
+++ b/v1/content/team-members/06-14-42-.md
@@ -11,11 +11,11 @@ head:
 members:
   - name: Ibrahim Mohamed
     image: /img/screenshot_20231114_215447_gallery-ibrahim-mohamed.jpg
-    role: Member
+    role: Vice Head
     email: ibrahim.mohamed01@eng-st.cu.edu.eg
     linkedin: https://www.linkedin.com/in/1brahimmohamed
   - name: "Mahmoud Mostafa Ahmed Ismail "
-    role: Member
+    role: Vice Head
     image: /img/img_20230614_142400-1-mahmoud-ismail-1-1-.jpg
     email: mahmoud.ismail702@eng-st.cu.edu.eg
     linkedin: https://www.linkedin.com/in/ma7moud-mostafa
