Update Team Members “06-14-30-”

--- a/v1/content/team-members/06-14-30-.md
+++ b/v1/content/team-members/06-14-30-.md
@@ -8,6 +8,15 @@ head:
   linkedin: https://www.linkedin.com/in/ahmed-ragab-1b4a911b5
   facebook: https://www.facebook.com/profile.php?id=100003361600722&mibextid=ZbWKwL
 members:
+  - name: "Menna Soliman "
+    role: Head
+    email: mennasoliman324@gmail.com
+    linkedin: https://www.linkedin.com/in/menna-soliman-06888b216
+    image: /img/img-20230906-wa0062-menna-soliman.jpg
+  - name: "Tasneem Esam "
+    role: Head
+    email: Tasneem.ibrahim01@eng-st.cu.edu.eg
+    image: /img/img-20230908-wa0100-tasneem-ibrahim.jpg
   - name: Islam amr saleh
     image: /img/picsart_10-28-08.06.28-islam-rifai-1-.jpg
     role: Member
