Update Team Members “06-15-02-”

--- a/v1/content/team-members/06-15-02-.md
+++ b/v1/content/team-members/06-15-02-.md
@@ -29,6 +29,18 @@ members:
     linkedin: https://www.linkedin.com/in/shahd-matter-22b159211?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
     facebook: https://www.facebook.com/shahd.mattar.3?mibextid=ZbWKwL
     image: /img/picsart_02-01-11.58.48-shahd-mattar-1-.jpg
+  - name: Malak Waleed Fouad
+    image: /img/img_2974-malak-waleed-1-1-.jpg
+    role: Member
+    email: malakwaleed264@gmail.com
+    linkedin: https://www.linkedin.com/in/malak-waleed-722215241?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
+    facebook: https://www.facebook.com/malak.waleed.357?mibextid=LQQJ4d
+  - name: Ibrahim Samy
+    image: /img/hima-ibrahim-imam.jpg
+    role: Member
+    email: Ibrahim.Samyy04@gmail.com
+    linkedin: https://www.linkedin.com/in/ibrahimsamyy04
+    facebook: https://www.facebook.com/himaa.emaam.22
   - name: Dina waleed Abd El Haleem Refay
     role: Member
     image: /img/img_9411-dina-refay.jpeg
@@ -38,31 +50,19 @@ members:
     email: podydata@gmail.com
     linkedin: https://www.linkedin.com/in/abdelrhman-muhammad-452a48226
     facebook: https://www.facebook.com/podydata?mibextid=ZbWKwL
-  - name: Ibrahim Samy
-    image: /img/hima-ibrahim-imam.jpg
-    role: Member
-    email: Ibrahim.Samyy04@gmail.com
-    linkedin: https://www.linkedin.com/in/ibrahimsamyy04
-    facebook: https://www.facebook.com/himaa.emaam.22
-  - name: Malak Waleed Fouad
-    image: /img/img_2974-malak-waleed-1-1-.jpg
-    role: Member
-    email: malakwaleed264@gmail.com
-    linkedin: https://www.linkedin.com/in/malak-waleed-722215241?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
-    facebook: https://www.facebook.com/malak.waleed.357?mibextid=LQQJ4d
   - name: shahd medhat mohamed
     image: /img/mee-shahd-medhat.jpg
     role: Member
     email: shahdmedhatt9@gmail.com
     linkedin: https://www.linkedin.com/in/shahd-medhat-957a691bb?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
-  - name: "Kenzy Magdy Mohamed "
-    image: /img/kenzy-kenzy-magdy-1-.jpg
-    role: Member
-    email: kenzy.magdy.soliman@gmail.com
   - name: Amira yasser mohammed riad
     image: /img/amira-yasser.jpg
     role: Member
     email: Amiray572@gmail.com
+  - name: "Kenzy Magdy Mohamed "
+    image: /img/kenzy-kenzy-magdy-1-.jpg
+    role: Member
+    email: kenzy.magdy.soliman@gmail.com
   - name: Yousef Suliman
     image: /img/20230901_185959-youssef-suliman.jpg
     role: Member
@@ -72,6 +72,11 @@ members:
     image: /img/nouran-ahmed.jpg
     role: Member
     email: nouranmaher973@gmail.com
+  - name: Ameer Louly
+    image: /img/1000122380.jpg
+    role: Member
+    email: loulyameer@gmail.com
+    linkedin: https://www.linkedin.com/in/ameerlouly
 ---
 **Cairo University Eco Racing Team - Communication and Public Relations Sub Teams**
 
