Update Team Members “05-07-18-”

--- a/v1/content/team-members/05-07-18-.md
+++ b/v1/content/team-members/05-07-18-.md
@@ -2,7 +2,7 @@
 team: Team Manager
 isDirectorsBoard: true
 head:
-  name: Alaa Ragab Sobhy
+  name: "Alaa Ragab "
   image: /img/alaa-ragab2.jpeg
   email: cairo.university.eco.racing.team@gmail.com
   linkedin: https://www.linkedin.com/in/alaa-ragab-sobhy-794456222/
