Update Team Members “05-07-18-”

--- a/v1/content/team-members/05-07-18-.md
+++ b/v1/content/team-members/05-07-18-.md
@@ -2,10 +2,10 @@
 team: Team Manager
 isDirectorsBoard: true
 head:
-  name: "Alaa Ragab "
-  image: /img/alaa-ragab2.jpeg
+  name: Menna Soliman
+  image: /img/menna-soliman-team-manager.png
   email: cairo.university.eco.racing.team@gmail.com
-  linkedin: https://www.linkedin.com/in/alaa-ragab-sobhy-794456222/
+  linkedin: ""
 members:
   - name: Mohamed Salem
     role: Director
