--- a/v1/content/team-members/05-07-18-.md
+++ b/v1/content/team-members/05-07-18-.md
@@ -7,31 +7,13 @@ head:
   email: cairo.university.eco.racing.team@gmail.com
   linkedin: ""
 members:
-  - name: Mohamed Salem
+  - name: Dalia Abdallah
     role: Director
-    image: /img/mohamed-salem-1-.jpg
+    image: /img/dalia-abdallah-communication-director.png
     email: ---
-  - name: Omar Mohsen
+  - name: "Osama Hamdy "
     role: Director
-    email: Omarmohsen2014@gmail.comOmarmohsen2014@gmail.com
-    image: /img/omar-mohsen-1-.jpg
-  - name: "Eman Ayman Yosry "
-    role: Director
-    email: emanaymanmm@gmail.com
-    linkedin: www.linkedin.com/in/eman-ayman-32a777254
-    facebook: https://www.facebook.com/emanaymanmm/
-    github: https://github.com/emanaymanmm
-    image: /img/1666732389736-eman-ayman.jfif
-  - name: Mohamed Abdelhakim Mostafa
-    image: /img/img_0440-mohamed-abdelhakim.jpg
-    role: Director
-    email: Mohameda.hakim01@gmail.com
-    linkedin: https://www.linkedin.com/in/mohameda-hakim?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
-    facebook: https://www.facebook.com/MohamedHakim01?mibextid=LQQJ4d
-  - name: "Sayed Sayed Mohamed "
-    image: /img/personal-photo-sayed-sayed.jpg
-    role: Director
-    email: sayedsayed200362@gmail.com
-    linkedin: https://www.linkedin.com/in/sayed-sayed-mohamed-ab1008260/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
+    email: ""
+    image: /img/osama-hamdy-technical-director.jpg
 ---
 directors
