Update Team Members “06-14-30-”

--- a/v1/content/team-members/06-14-30-.md
+++ b/v1/content/team-members/06-14-30-.md
@@ -2,11 +2,11 @@
 team: "Body & Chassis "
 isDirectorsBoard: false
 head:
-  name: Abdullah Mohamed Abdullah Kamel
-  image: /img/abdullah-mohamed_str2-abdullah-kamel.jpeg
-  email: "abdullah.kamel00@eng-st.cu.edu.eg "
-  linkedin: https://www.linkedin.com/in/ahmed-ragab-1b4a911b5
-  facebook: https://www.facebook.com/profile.php?id=100003361600722&mibextid=ZbWKwL
+  name: omar essam eldin
+  image: /img/omar-essam-eldin-body-chassis-leader.jpeg
+  email: ""
+  linkedin: ""
+  facebook: ""
 members:
   - name: "Menna Soliman "
     role: Head
