Update Team Members “06-14-30-”

--- a/v1/content/team-members/06-14-30-.md
+++ b/v1/content/team-members/06-14-30-.md
@@ -8,11 +8,11 @@ head:
   linkedin: ""
   facebook: ""
 members:
-  - name: "Menna Soliman "
-    role: Head
-    email: mennasoliman324@gmail.com
-    linkedin: https://www.linkedin.com/in/menna-soliman-06888b216
-    image: /img/img-20230906-wa0062-menna-soliman.jpg
+  - name: Alaa Salah
+    role: Member
+    email: ""
+    linkedin: ""
+    image: /img/alaa-salah-body-chassis.jpg
   - name: "Tasneem Esam "
     role: Head
     email: Tasneem.ibrahim01@eng-st.cu.edu.eg
