Update Team Members “06-14-30-”

--- a/v1/content/team-members/06-14-30-.md
+++ b/v1/content/team-members/06-14-30-.md
@@ -13,10 +13,10 @@ members:
     email: ""
     linkedin: ""
     image: /img/alaa-salah-body-chassis.jpg
-  - name: "Tasneem Esam "
+  - name: Abdullah Gamal
     role: Head
     email: Tasneem.ibrahim01@eng-st.cu.edu.eg
-    image: /img/img-20230908-wa0100-tasneem-ibrahim.jpg
+    image: /img/ِabdullah-gamal-body-chassis.jpg
   - name: Islam amr saleh
     image: /img/picsart_10-28-08.06.28-islam-rifai-1-.jpg
     role: Member
