Update Team Members “06-14-30-”

--- a/v1/content/team-members/06-14-30-.md
+++ b/v1/content/team-members/06-14-30-.md
@@ -17,8 +17,8 @@ members:
     role: Head
     email: Tasneem.ibrahim01@eng-st.cu.edu.eg
     image: /img/ِabdullah-gamal-body-chassis.jpg
-  - name: Islam amr saleh
-    image: /img/picsart_10-28-08.06.28-islam-rifai-1-.jpg
+  - name: Hesham Mohamed
+    image: /img/hesham-mohamed-body-chassis.jpg.jpg
     role: Member
     email: "Islamamr648@gmail.com "
     linkedin: https://www.linkedin.com/in/islamamr?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
