Update Team Members “12-14-43-”

--- a/v1/content/team-members/12-14-43-.md
+++ b/v1/content/team-members/12-14-43-.md
@@ -4,6 +4,10 @@ isDirectorsBoard: false
 head:
   name: omar essam eldin
   image: /img/file-omar-essam-eldin.jpg
+members:
+  - name: ِAbdullah Gamal
+    image: /img/ِabdullah-gamal-body-chassis.jpg
+    role: Member
 ---
 
 
