Update Team Members “12-14-43-”

--- a/v1/content/team-members/12-14-43-.md
+++ b/v1/content/team-members/12-14-43-.md
@@ -11,6 +11,9 @@ members:
   - name: Alaa Salah
     image: /img/alaa-salah-body-chassis.jpg
     role: Member
+  - name: Hesham Mohamed
+    image: /img/hesham-mohamed-body-chassis.jpg.jpg
+    role: Member
 ---
 
 
