Update Team Members “12-14-43-”

--- a/v1/content/team-members/12-14-43-.md
+++ b/v1/content/team-members/12-14-43-.md
@@ -14,6 +14,9 @@ members:
   - name: Hesham Mohamed
     image: /img/hesham-mohamed-body-chassis.jpg.jpg
     role: Member
+  - name: "Mohammed Abdou "
+    image: /img/mohammed-abdou-body-chassis.jpg
+    role: Member
 ---
 
 
