Update Team Members “12-14-43-”

--- a/v1/content/team-members/12-14-43-.md
+++ b/v1/content/team-members/12-14-43-.md
@@ -17,6 +17,9 @@ members:
   - name: "Mohammed Abdou "
     image: /img/mohammed-abdou-body-chassis.jpg
     role: Member
+  - name: Mohamed Khaled
+    image: /img/125.png
+    role: Member
 ---
 **Cairo University Eco Racing Team - Body and Chassis Sub Team**
 
