--- a/v1/content/team-members/12-14-43-.md
+++ b/v1/content/team-members/12-14-43-.md
@@ -18,7 +18,7 @@ members:
     image: /img/mohammed-abdou-body-chassis.jpg
     role: Member
   - name: Mohamed Khaled
-    image: /img/125.png
+    image: /img/mohamed-khaled-body-chassis.jpg
     role: Member
 ---
 **Cairo University Eco Racing Team - Body and Chassis Sub Team**
