Update Team Members “06-14-35-”

--- a/v1/content/team-members/06-14-35-.md
+++ b/v1/content/team-members/06-14-35-.md
@@ -2,10 +2,10 @@
 team: Engine
 isDirectorsBoard: false
 head:
-  name: Osama Hossam Hamdy
-  image: /img/img_20230415_230046_148-osama-hamdy.jpg
-  email: Hamdy.osama002@gmail.com
-  linkedin: https://www.linkedin.com/in/osama-hamdy-002
+  name: Meriam tamer
+  image: /img/meriam-tamer-engine-leader.jpg
+  email: ""
+  linkedin: ""
   facebook: https://www.facebook.com/osama602
 members:
   - name: "Halla gamal mohamed "
