Update Team Members “06-14-35-”

--- a/v1/content/team-members/06-14-35-.md
+++ b/v1/content/team-members/06-14-35-.md
@@ -8,12 +8,12 @@ head:
   linkedin: ""
   facebook: https://www.facebook.com/osama602
 members:
-  - name: "Halla gamal mohamed "
+  - name: "Dana Ghobashy "
     role: Member
     email: Hallafathy7@gmail.com
     linkedin: http://linkedin.com/in/halla-fathy-955a99211
     facebook: https://www.facebook.com/hala.fathy.969?mibextid=LQQJ4d
-    image: /img/c3e1bcc1-7ace-489c-965f-18fd26c6d64c-halla-fathy.jpg
+    image: /img/dana-ghobashy-engine.jpg
   - name: Youssef Mohamed Elshamy
     image: /img/img_7666-youssef-elshamy-1-.jpg
     role: Member
