Update Team Members “06-14-35-”

--- a/v1/content/team-members/06-14-35-.md
+++ b/v1/content/team-members/06-14-35-.md
@@ -10,9 +10,9 @@ head:
 members:
   - name: "Dana Ghobashy "
     role: Member
-    email: Hallafathy7@gmail.com
-    linkedin: http://linkedin.com/in/halla-fathy-955a99211
-    facebook: https://www.facebook.com/hala.fathy.969?mibextid=LQQJ4d
+    email: ""
+    linkedin: ""
+    facebook: ""
     image: /img/dana-ghobashy-engine.jpg
   - name: Youssef Mohamed Elshamy
     image: /img/img_7666-youssef-elshamy-1-.jpg
