Update Team Members “06-14-35-”

--- a/v1/content/team-members/06-14-35-.md
+++ b/v1/content/team-members/06-14-35-.md
@@ -14,12 +14,12 @@ members:
     linkedin: ""
     facebook: ""
     image: /img/dana-ghobashy-engine.jpg
-  - name: Youssef Mohamed Elshamy
-    image: /img/img_7666-youssef-elshamy-1-.jpg
+  - name: Bishoy botros
+    image: /img/bishoy-botros-engine.jpg
     role: Member
-    email: Shamyyoussef09@gmail.com
-    linkedin: Youssef elshamy
-    facebook: Yossef shamy
+    email: ""
+    linkedin: ""
+    facebook: ""
   - name: Meriam Tamer
     role: Member
     image: /img/whatsapp-image-2023-11-28-at-5.10.36-pm-meriam-hanna.jpeg
