Update Team Members “06-14-35-”

--- a/v1/content/team-members/06-14-35-.md
+++ b/v1/content/team-members/06-14-35-.md
@@ -6,7 +6,7 @@ head:
   image: /img/meriam-tamer-engine-leader.jpg
   email: ""
   linkedin: ""
-  facebook: https://www.facebook.com/osama602
+  facebook: ""
 members:
   - name: "Dana Ghobashy "
     role: Member
@@ -25,10 +25,6 @@ members:
     image: /img/mohamed-radwan-engine.jpg
     email: ""
     linkedin: ""
-  - name: Tarek Hany Ali Ahmed
-    image: /img/img_3178-tarek-hany.jpeg
-    role: Member
-    email: Tarekhany76@gmail.com
 ---
 **Cairo University Eco Racing Team - Engine Sub Team**
 
