Update Team Members “06-14-33-”

--- a/v1/content/team-members/06-14-33-.md
+++ b/v1/content/team-members/06-14-33-.md
@@ -28,12 +28,12 @@ members:
     image: /img/img_20221017_165001-belal-abdel-aziz.jpg
     email: belalabdelaziz576@gmail.com
     linkedin: https://www.linkedin.com/in/belal-abdelaziz-0a3350225/
-  - name: Marim Emad Elsayed
-    image: /img/smartselect_20231128-160821_gallery-mariem-emad.jpg
+  - name: Ekwan Ehab
+    image: /img/ekwan-ehab-power-transmission-.jpg
     role: Member
-    email: marememad2000@gmail.com
-    linkedin: https://www.linkedin.com/in/marim-emad-b6183a152?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
-    facebook: https://www.facebook.com/profile.php?id=100008812066277&mibextid=ZbWKwL
+    email: ""
+    linkedin: ""
+    facebook: ""
 ---
 **Cairo University Eco Racing Team - Power Transmission Sub Team**
 
