Update Team Members “06-14-33-”

--- a/v1/content/team-members/06-14-33-.md
+++ b/v1/content/team-members/06-14-33-.md
@@ -18,9 +18,9 @@ members:
     image: /img/img-20230829-wa0148-nancy-ghobrial-1-.jpg
     email: Nancymotawadea@gmail.com
     role: Member
-  - name: Alaa Mahmoud Yassin
+  - name: Karim abdelhafez
     role: Member
-    image: /img/20220729_144421-alaa-saud-1-.jpg
+    image: /img/karim-abdelhafez-power-transmission-.jpg
     email: Alaa.saud02@eng-st.cu.edu.eg
     linkedin: https://www.linkedin.com/in/alaa-yassin-608699241?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
   - name: "Belal Abdelaziz Mostafa "
