Update Team Members “06-14-33-”

--- a/v1/content/team-members/06-14-33-.md
+++ b/v1/content/team-members/06-14-33-.md
@@ -21,8 +21,8 @@ members:
   - name: Karim abdelhafez
     role: Member
     image: /img/karim-abdelhafez-power-transmission-.jpg
-    email: Alaa.saud02@eng-st.cu.edu.eg
-    linkedin: https://www.linkedin.com/in/alaa-yassin-608699241?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
+    email: ""
+    linkedin: ""
   - name: "Belal Abdelaziz Mostafa "
     role: Member
     image: /img/img_20221017_165001-belal-abdel-aziz.jpg
