Update Team Members “06-14-33-”

--- a/v1/content/team-members/06-14-33-.md
+++ b/v1/content/team-members/06-14-33-.md
@@ -34,6 +34,9 @@ members:
     email: ""
     linkedin: ""
     facebook: ""
+  - name: Youssef okasha
+    image: /img/youssef-okasha-power-transmission.jpg
+    role: Member
 ---
 **Cairo University Eco Racing Team - Power Transmission Sub Team**
 
