Update Team Members “06-14-21-”

--- a/v1/content/team-members/06-14-21-.md
+++ b/v1/content/team-members/06-14-21-.md
@@ -2,11 +2,11 @@
 team: Vehicle Dynamics
 isDirectorsBoard: false
 head:
-  name: Ahmed Ragab Tawfik
-  image: /img/img_20231114_222621-ahmed-rajab.jpg
-  email: ahmed.ragab200099@gmail.com
-  linkedin: https://www.linkedin.com/in/ahmed-ragab-1b4a911b5
-  facebook: https://www.facebook.com/profile.php?id=100003361600722&mibextid=ZbWKwL
+  name: Mohamed Wahid
+  image: /img/mohamed-wahid-vehicles-dynamics-leader.jpg
+  email: ""
+  linkedin: ""
+  facebook: ""
 members:
   - name: Moustafa youness
     image: /img/img_20230126_181026_238-mustafa-younis.jpg
