--- a/v1/content/team-members/06-14-21-.md
+++ b/v1/content/team-members/06-14-21-.md
@@ -8,21 +8,21 @@ head:
   linkedin: ""
   facebook: ""
 members:
-  - name: Moustafa youness
-    image: /img/img_20230126_181026_238-mustafa-younis.jpg
+  - name: Moaz mohamed
+    image: /img/moaz-mohamed-vd.jpg
     role: Member
-    email: moustafayounes18@gmail.com
-    facebook: https://www.facebook.com/profile.php?id=100009028243743&mibextid=ZbWKwL
-  - name: Osama Ashraf
-    image: /img/img_20220630_202556_880-osama-ashraf.jpg
+    email: ""
+    facebook: ""
+  - name: Mariam Amr
+    image: /img/mariam-amr-vehicle-dynamics.jpg
     role: Member
     email: "Osamaashraf1970@gmail.com "
     linkedin: https://www.linkedin.com/in/osama-ashraf-a06770247?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
     facebook: https://www.facebook.com/osama.ashraf.56884?mibextid=ZbWKwL
-  - name: Ahmed wael
+  - name: Abdelrahman muhammed
     role: Member
     email: ahmed.wael7575@gmail.com
-    image: /img/9fa8d067-72af-4a84-a267-f5c8ab39a1b6-ahmed-wael.jpg
+    image: /img/abdelrahman-muhammed-vd.jpg
   - name: Salma tarek omera
     image: /img/screenshot_20231130-132217_gallery-salma-omera.jpg
     role: Member
