--- a/v1/content/team-members/06-14-21-.md
+++ b/v1/content/team-members/06-14-21-.md
@@ -23,16 +23,11 @@ members:
     role: Member
     email: ahmed.wael7575@gmail.com
     image: /img/abdelrahman-muhammed-vd.jpg
-  - name: Salma tarek omera
-    image: /img/screenshot_20231130-132217_gallery-salma-omera.jpg
+  - name: Waleed Ashraf
+    image: /img/waleed-ashraf-vd.jpeg
     role: Member
-    email: Salmaomera158@gmail.com
-    linkedin: https://www.linkedin.com/in/salma-omera-67665014a/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
-  - name: Mohamed wahid
-    image: /img/img-20231029-wa0015-amazing-enterprise.jpg
-    role: Member
-    email: mohawahid221@gmail.com
-    linkedin: https://www.linkedin.com/in/mohamed-wahid-a95976208?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
+    email: ""
+    linkedin: ""
 ---
 **Cairo University Eco Racing Team - Vehicle Dynamics Sub Team**
 
