Update Team Members “06-15-04-”

--- a/v1/content/team-members/06-15-04-.md
+++ b/v1/content/team-members/06-15-04-.md
@@ -2,25 +2,30 @@
 team: Fund Raising
 isDirectorsBoard: false
 head:
-  name: ----
+  name: Fatma Fouda
   email: ----
-  image: /img/apple-touch-icon.png
+  image: /img/fatma-fouda-pr_fundraising-head.jpg
 members:
-  - name: "Salma Ibrahim "
-    image: /img/fr-member-salma-ibrahim.jpg
+  - name: Anas Alryan
+    image: /img/anas-alryan-pr_fundraising.jpg
     role: Member
-    email: salmaibrahimelsayed@gmail.com
-    linkedin: https://www.linkedin.com/in/salma-ibrahim-300410145?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
-  - name: Habiba Magdy Ammar
+  - name: Atef Atef Abdelrahman
+    image: /img/atef-atef-abdelrahman-pr_fr.jpg
     role: Member
-    email: habiba8.magdy@gmail.com
-    linkedin: https://www.linkedin.com/in/habiba-ammar-39a617258?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
-    image: /img/img-20230707-wa0010-habiba-ammar.jpg
-  - name: "Farida Mostafa Mohamed "
-    image: /img/img_20231114_235113_edit_8748910628352-farida-mostafa-1-.jpg
+  - name: Ayatullah Ahmed
+    image: /img/ayatullah-ahmed-pr_fundraising.jpg
     role: Member
-    email: Farida.mostafa6666@gmail.com
-    linkedin: https://www.linkedin.com/in/farida-mostafa-
-    facebook: https://www.facebook.com/profile.php?id=100009339684344&mibextid=ZbWKwL
+  - name: Hassan Dahroug
+    image: /img/hassan-dahroug-pr-.jpg
+    role: Member
+  - name: Lobna Ashraf Louly
+    image: /img/lobna-ashraf-louly.png
+    role: Member
+  - name: Mariam Mohamed
+    image: /img/mariam-mohamed-pr_fundraising.jpg
+    role: Member
+  - name: Salem AlaaEldin
+    image: /img/salem-alaaeldin-pr_fundraising.jpg
+    role: Member
 ---
 \-﻿-
