Update Team Members “06-14-57-”

--- a/v1/content/team-members/06-14-57-.md
+++ b/v1/content/team-members/06-14-57-.md
@@ -3,21 +3,28 @@ team: Planning & Logistics
 isDirectorsBoard: false
 head:
   name: Mostafa Hesham
-  email: Mostafa12.Hesham12@gmail.comMostafa12.Hesham12@gmail.com
+  email: Mostafa12.Hesham12@gmail.com
   linkedin: linkedin.com/in/mostafahesham00
-  image: /img/img_0430-mostafa-hesham.jpg
+  image: /img/mostafa_hesham_mostafa.jpg
 members:
-  - name: Ziad Ahmed Aboelkhair
-    email: ziad.aboelkhair02@gmail.com
+  - name: Abdelrahman Amr
+    image: /img/abdelrahman-amr_.jpg
     role: Member
-    linkedin: https://www.linkedin.com/in/ziad-aboelkhair/
-    image: /img/photo-ziad-aboelkhair.jpg
-  - name: Hazem Alshawadfy Alzorkany
-    image: /img/picsart_10-20-10.05.08-hazem-alzorkany.jpg
+  - name: Abdulrahman hazem
+    image: /img/abdulrahman-hazem.jpg
     role: Member
-    email: hazem.alzorkany01@eng-st.cu.edu.eg
-    linkedin: https://www.linkedin.com/in/hazem-alzorkany-61759026a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
-    facebook: https://www.facebook.com/hazem.alshawadfy.7?mibextid=ZbWKwL
+  - name: Alaa Yassin
+    image: /img/alaa-yassin.jpg
+    role: Member
+  - name: Layla
+    image: /img/layla.jpg
+    role: Member
+  - name: Shawqy Ali
+    image: /img/shawqy-ali.jpg
+    role: Member
+  - name: Zeyad Elsonney
+    image: /img/zeyad-elsonney.jpg
+    role: Member
 ---
 **Cairo University Eco Racing Team - Planning & Logistics Sub Team**
 
