Update Team Members “06-14-37-”

--- a/v1/content/team-members/06-14-37-.md
+++ b/v1/content/team-members/06-14-37-.md
@@ -8,43 +8,14 @@ head:
   linkedin: https://www.linkedin.com/in/mrshamashergy/
   facebook: https://www.facebook.com/profile.php?id=100090905708149
 members:
-  - name: "Alaa Ibrahim Awad Abdul-ghani "
-    email: alaaabdelghani2000@gmail.com
-    role: Member
-    linkedin: https://www.linkedin.com/in/alaa-ibrahim-136b40265/
-    image: /img/whatsapp-image-2023-11-12-at-10.21.05-pm-alaa-abdul-ghani.jpeg
-  - name: Omnia Atef
-    image: /img/20230518_122438-omnia-hilal-1-1-1-1-.jpg
-    role: Member
-    linkedin: https://www.linkedin.com/in/omnia-atef-helal-5b4b17223?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
-    email: omnia.atef712@gmail.com
   - name: Muhammed yasser muhammed
     image: /img/1676617782593-mohamed-mostafa.jpeg
     role: Member
     email: mohammedkher844@gmail.com
     linkedin: https://www.linkedin.com/in/mohamed-yasser-0170a1249
-  - name: Basant Yasser
+  - name: Mahmoud khaled
+    image: /img/mahmoud-khaled-power-electronics.jpg
     role: Member
-    email: basant.yasserbyb@gmail.com
-    linkedin: https://www.linkedin.com/in/basant-yasser-5a06931ba
-    image: /img/img-20230518-wa0034-basant-mohammed.jpg
-  - name: Alaa Hussein Ali Sallam
-    image: /img/alaa-hussien.jpg
-    role: Member
-    email: alaahusseinali93@gmail.com‏
-    linkedin: https://www.linkedin.com/in/alaa-hussein-8abb91265
-    github: ""
-    facebook: https://www.facebook.com/alaa.hussein.3766?mibextid=ZbWKwL
-  - name: Omar Hussein
-    image: /img/omar-hussein2.jpeg
-    role: Member
-    email: omar.hussein01@eng-st.cu.edu.eg
-    linkedin: https://www.linkedin.com/in/omar-hussein-433b81243?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
-  - name: Yasmine ahmed mohamed abu-ali
-    image: /img/yasmin-aboali.jpeg
-    role: Member
-    email: yassmineah711@gmail.com
-    linkedin: https://www.linkedin.com/in/yasmine-ahmed-875108226?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
 ---
 **Cairo University Eco Racing Team - Power Electronics Sub Team**
 
