Update Team Members “06-14-37-”

--- a/v1/content/team-members/06-14-37-.md
+++ b/v1/content/team-members/06-14-37-.md
@@ -16,6 +16,9 @@ members:
   - name: Mahmoud khaled
     image: /img/mahmoud-khaled-power-electronics.jpg
     role: Member
+  - name: Youssef Osama
+    image: /img/youssef-osama-power-electronics.jpg
+    role: Member
 ---
 **Cairo University Eco Racing Team - Power Electronics Sub Team**
 
