Update Team Members “06-14-37-”

--- a/v1/content/team-members/06-14-37-.md
+++ b/v1/content/team-members/06-14-37-.md
@@ -19,6 +19,24 @@ members:
   - name: Youssef Osama
     image: /img/youssef-osama-power-electronics.jpg
     role: Member
+  - name: Mazen Abdelaziem
+    image: /img/mazen-abdelaziem-power-electronics.jpg
+    role: Member
+  - name: Mahmoud Hefny
+    image: /img/mahmoud-hefny-power-electronics.jpg
+    role: Member
+  - name: Mohammed Ahmed
+    image: /img/mohammed-ahmed-power-electronics-.jpg
+    role: Member
+  - name: Karim kamal
+    image: /img/karim-kamal.jpg
+    role: Member
+  - name: "Youssef Ibrahim "
+    image: /img/youssef-ibrahim-.jpg
+    role: Member
+  - name: omar magdy
+    image: /img/omar-magdy-power-electronics.jpg
+    role: Member
 ---
 **Cairo University Eco Racing Team - Power Electronics Sub Team**
 
