Update Team Members “06-14-37-”

--- a/v1/content/team-members/06-14-37-.md
+++ b/v1/content/team-members/06-14-37-.md
@@ -2,15 +2,15 @@
 team: Power Electronics
 isDirectorsBoard: false
 head:
-  name: Abdullah Mohamed Mostafa El Shamashergy
-  image: /img/20230518_171550-abdullah-el-shamashergy.jpg
-  email: abdullah.elshamashergy@gmail.com
-  linkedin: https://www.linkedin.com/in/mrshamashergy/
-  facebook: https://www.facebook.com/profile.php?id=100090905708149
+  name: Muhammed yasser muhammed
+  image: /img/mohammed_yasser-power_electronics.jpg
+  email: ""
+  linkedin: ""
+  facebook: ""
 members:
   - name: Muhammed yasser muhammed
-    image: /img/1676617782593-mohamed-mostafa.jpeg
-    role: Member
+    image: /img/mohammed_yasser-power_electronics.jpg
+    role: Head
     email: mohammedkher844@gmail.com
     linkedin: https://www.linkedin.com/in/mohamed-yasser-0170a1249
   - name: Mahmoud khaled
