Update Team Members “12-18-23-”

--- a/v1/content/team-members/12-18-23-.md
+++ b/v1/content/team-members/12-18-23-.md
@@ -2,8 +2,8 @@
 team: Embedded control
 isDirectorsBoard: false
 head:
-  name: testing
-  image: /img/2.jpg
+  name: Mostafa Yousry
+  image: /img/416097405_380690314513426_668868554564914189_n.jpg
 members:
   - name: Aya Ayman
     image: /img/aya-ayman-embedded-control.jpg
