Update Team Members “06-14-46-”

--- a/v1/content/team-members/06-14-46-.md
+++ b/v1/content/team-members/06-14-46-.md
@@ -2,69 +2,69 @@
 team: Autonomous Embedded
 isDirectorsBoard: false
 head:
-  name: Omar Mohamed Tolba
-  image: /img/1690471810831-omar-tolba.jpg
-  email: omartolba004@gmail.com
-  linkedin: https://www.linkedin.com/in/tolba-omar/
-  facebook: https://www.facebook.com/tolba.omr/
-  github: https://github.com/OmarTolba004
+  name: Mostafa Yossry
+  image: /img/mostafa-yossry-embedded-team.jpg
+  email: ""
+  linkedin: ""
+  facebook: ""
+  github: ""
 members:
-  - name: Abdelrahman Sanad
-    image: /img/3842e793-9e9d-47b3-8bca-d94e42650147-abdelrahman-mahmoud.jpeg
+  - name: "Abdelrahman Moamen Eltaweel "
+    image: /img/abdelrahman-moamen-eltaweel-_-embedded-_-communication.jpeg
     role: Member
-    email: abdelrahmanmahmoudsalah85@gmail.com
-    linkedin: http://linkedin.com/in/abdelrahmansalah3
-    facebook: https://www.facebook.com/Borg21?mibextid=LQQJ4d
-  - name: Moustafa Ahmed
-    image: /img/picsart_23-09-16_20-24-32-395-moustafa-ahmed-adel-1-.jpg
+  - name: Ali Said
+    image: /img/ali-said-embedded-team-i_o-stack.jpg
     role: Member
-    email: moustafa.ahmed7123@gmail.com
-    linkedin: https://www.linkedin.com/in/moustafa-ahmed-364a57207/
-    facebook: https://www.facebook.com/Moustafa.Ahmed.01/
-  - name: "Ahmed Gamal Ismail Noureddine "
-    image: /img/img-20230304-wa0026-2-ahmed-noureddine-1-.jpg
+  - name: Amr Ismail
+    image: /img/amr_ismail-dev_embedded_team.jpg
     role: Member
-    email: ahmed.noureddine02@eng-st.cu.edu.eg
-    linkedin: https://www.linkedin.com/in/ahmedgamal74
-    facebook: https://m.facebook.com/profile.php/?id=100006018391625
-  - name: Mostafa Yossry Fouad Elgharbawy
-    image: /img/img_20220531_132052-mostafa-elgharbawy-1-.jpg
+  - name: Basma Khaled
+    image: /img/basma-khaled-abdelhafiz_embedded_iostack.jpg
     role: Member
-  - name: Khaled Waleed Samir Metwally
-    image: /img/img_02550-khaled-waleed-1-.jpg
+  - name: David Sameh
+    image: /img/david_sameeh-_-embedded-rtos.jpg
     role: Member
-    email: khaledwaleed42069@gmail.com
-    linkedin: https://www.linkedin.com/in/khaled-waleed-036205228
-    facebook: https://www.facebook.com/khaled.waleed.946
-  - name: Mohamed Ahmed Ibrahim Sobh
-    image: /img/mohamed-sobh-mohamed-sobh.jpg
+  - name: Eman Abdelazeem
+    image: /img/eman-abdelazeem-embedded-rtos.jpg
     role: Member
-    email: mohamed.sobh032@gmail.com
-    linkedin: www.linkedin.com/in/mohamed-sobh-82b6bb250
-    facebook: https://www.facebook.com/profile.php?id=100003543010489
-  - role: Member
-    name: Omar Saad Elgharbawy
-    image: /img/img_7889-omar-saad.jpg
-    email: omarsaadelgharbawy@gmail.com
-    linkedin: https://www.linkedin.com/in/omar-saad-75521119a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
-    facebook: https://www.facebook.com/omar.saad.50?mibextid=LQQJ4d
-  - name: Omar Saad Elgharbawy
-    image: /img/omar-saad.jpeg
+  - name: Hasnaa Hossam
+    image: /img/hasnaa-hossam-autonomous-embedded-rtos.jpg
     role: Member
-    email: omarsaadelgharabwy@gmail.com
-    linkedin: https://www.linkedin.com/in/omar-saad-75521119a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
-    facebook: https://www.facebook.com/omar.saad.50?mibextid=LQQJ4d
-  - name: "Bassant Ahmed Elbakry "
-    image: /img/bassant-ahmed-elbakry.jpg
+  - name: Wafaa Waheed
+    image: /img/wafaa-waheed-emb_comm-team.jpg
     role: Member
-    email: bassantelbakry0@gmail.com
-    linkedin: https://www.linkedin.com/in/bassant-ahmed-elbakry-57662921b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
-    facebook: https://www.facebook.com/bosy.bosy.3591?mibextid=9R9pXO
-  - name: Ahmed Alaaeldin Ibrahim
-    image: /img/ahmed-alaa.jpg
+  - name: Waleed Ashraf Ibrahim
+    image: /img/waleed-ashraf-ibrahim.jpeg
     role: Member
-  - name: Omar Said
-    image: /img/picsart_12-25-09.51.45-omar-aziz.jpg
+  - name: Hassan Hossam
+    image: /img/hassan_hossam_iostack.jpg
+    role: Member
+  - name: Yousef Maged
+    image: /img/img_20230601_110743_443.jpg
+    role: Member
+  - name: Mariam Ahmed
+    image: /img/mariam-ahmed-embedded-team-communication-stack.jpg
+    role: Member
+  - name: Mariam Yasser
+    image: /img/mariam-yasser-embedded-team_io-stack.jpg
+    role: Member
+  - name: Moumen Ibrahim
+    image: /img/moumen-ibrahim-autonomous_rtos.jpg
+    role: Member
+  - name: Nourseen Khaled
+    image: /img/nourseen-khaled-_embeded-i_o-stack_.jpg
+    role: Member
+  - name: Omar Ibrahim
+    image: /img/omar-ibrahim-dev_embedded-i_o-stack-.jpg
+    role: Member
+  - name: Rana Khaled
+    image: /img/rana-khaled-embedded-team-i_o-stack.jpg
+    role: Member
+  - name: Shaimaa Kamel
+    image: /img/shaimaa-kamel-_embedded_rtos.jpg
+    role: Member
+  - name: Tawfik Tamer
+    image: /img/tawfik-tamer-embedded-i_o-stack_.jpg
     role: Member
 ---
 **Cairo University Eco Racing Team - Autonomous Embedded Systems Sub Team**
