--- a/v1/content/team-members/12-18-23-.md
+++ b/v1/content/team-members/12-18-23-.md
@@ -2,7 +2,7 @@
 team: Embedded control
 isDirectorsBoard: false
 head:
-  name: Mostafa Yousry
+  name: Ahmed  Alaa
   image: /img/416097405_380690314513426_668868554564914189_n.jpg
 members:
   - name: Aya Ayman
