Update Team Members “06-14-46-”

--- a/v1/content/team-members/06-14-46-.md
+++ b/v1/content/team-members/06-14-46-.md
@@ -66,6 +66,9 @@ members:
   - name: Tawfik Tamer
     image: /img/tawfik-tamer-embedded-i_o-stack_.jpg
     role: Member
+  - name: Hazem Hegazy
+    image: /img/hazem_hegazy_embedded_-_communications_.jpg
+    role: Member
 ---
 **Cairo University Eco Racing Team - Autonomous Embedded Systems Sub Team**
 
